deploy war to standalone Tomcat

--- a/demo-springboot-web/pom.xml
+++ b/demo-springboot-web/pom.xml
@@ -32,6 +32,7 @@
 
 	
     <build>
+    	<finalName>spring-boot-demo</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
