--- a/demo-springboot-web/src/main/resources/application-dos.yml
+++ b/demo-springboot-web/src/main/resources/application-dos.yml
@@ -4,4 +4,7 @@ server:
 logging:
   level:
     org.springframework: INFO
+    
+log.path: "g:/logs"
+  
 management.endpoints.web.exposure.include: "*"
