--- a/demo-springboot-web/pom.xml
+++ b/demo-springboot-web/pom.xml
@@ -12,7 +12,8 @@
 	<parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.5</version>
+        <!-- Swagger 2 does not work with Spring boot 2.6 -->
+        <version>2.5.8</version>
     </parent>
 
     <properties>
@@ -32,8 +33,12 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-boot-starter</artifactId>
+	    	<version>3.0.0</version>
+		</dependency>
     </dependencies>
-
 	
     <build>
     	<finalName>spring-boot-demo</finalName>
