--- a/demo-springboot-web/src/main/resources/application.yml
+++ b/demo-springboot-web/src/main/resources/application.yml
@@ -5,3 +5,6 @@ logging:
   level:
     org.springframework: INFO
 management.endpoints.web.exposure.include: "*"
+
+# Needed for swagger 2 to work with Spring boot 2.6
+spring.mvc.pathmatch.matching-strategy: ant_path_matcher
