basic vs form vs kerberos authehtication

--- a/demo-springboot-web/Dockerfile
+++ b/demo-springboot-web/Dockerfile
@@ -1,4 +1,5 @@
 FROM adoptopenjdk/openjdk11:latest
+RUN echo `whoami`
 RUN mkdir -p /opt/app/logs
 COPY ./target/spring-boot-demo.jar /opt/app
 expose 7777
