--- a/demo-springboot-web/pom.xml
+++ b/demo-springboot-web/pom.xml
@@ -24,6 +24,7 @@ deploy root: war file name, spring-boot-demo
 
     <properties>
         <java.version>11</java.version>
+		<spring.security.version>5.8.9</spring.security.version>
     </properties>
 
     <dependencies>
@@ -32,8 +33,24 @@ deploy root: war file name, spring-boot-demo
             <artifactId>spring-boot-starter-web</artifactId>
 	   </dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
+			<groupId>org.springframework.security.kerberos</groupId>
+			<artifactId>spring-security-kerberos-web</artifactId>
+			<version>1.0.1.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>${spring.security.version}</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
