--- a/spring-jdbc/src/main/resources/application.properties
+++ b/spring-jdbc/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 spring.application.name=spring-jdbc
-logging.level.root=DEBUG
+logging.level.root=INFO
 
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=jeffrey1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.ds1.url=jdbc:mysql://localhost:3306/test
+spring.ds1,datasource.username=root
+spring.datasource.ds1.password=jeffrey1
+spring.datasource.ds1.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.ds2.url=jdbc:mysql://localhost:3306/test
+spring.ds3,datasource.username=root
+spring.ds3.datasource.password=jeffrey1
+spring.ds3.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
