--- a/demo-springboot-web/src/main/resources/application.yml
+++ b/demo-springboot-web/src/main/resources/application.yml
@@ -18,7 +18,7 @@ server:
 logging:
   level:
     org.springframework: INFO
-log.path: "/home/jeff/dev/logs"
+log.path: "g:/dev/logs/"
 
 management.endpoints.web.exposure.include: "*"
 
